LEP-4748
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@12835 05bdf26c-840f-0410-9ced-eb539d925f36